Fix status tab not showing content (#519)
* Fix status tab

* Add better message when no running instances

--- a/src/views/AwsProvisioner/styles.module.css
+++ b/src/views/AwsProvisioner/styles.module.css
@@ -36,3 +36,7 @@
 .recentErrorsButton {
   margin-top: -10px;
 }
+
+.emptyStatusTab {
+  margin-top: 10px;
+}
